@@ -1,7 +1,7 @@
-#include <LuceneKit/Analysis/LCAnalyzer.h>
-#include <LuceneKit/GNUstep/GNUstep.h>
+#include "LCAnalyzer.h"
+#include "GNUstep.h"
 #include <UnitKit/UnitKit.h>
-#include <LuceneKit/Java/LCStringReader.h>
+#include "LCStringReader.h"
 
 @interface LCAnalyzer (UKTest_Additions)
 - (void) compare: (NSString *) s and: (NSArray *) a
