@@ -1,3 +1,8 @@
+2005-08-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>
+
+    * Source/Analysis/TestAnalyzer.h:
+    Fix headers.
+
 2005-10-06 Quentin Mathe <qmathe@club-internet.fr>
 
     Warning! Xcode compilation untested.
